--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -45,6 +45,10 @@ label {
   margin: 40px 10px;
 }
 
+form .button {
+  width: 100%;
+}
+
 .newsletter {
   display: flex;
   flex-direction: column;
@@ -105,5 +109,25 @@ label {
   .contact-img {
     width: 300px;
     height: auto;
+  }
+
+  form .button {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+
+  .newsletter-input {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 20em;
+    z-index: 2;
+  }
+
+  .newsletter-input button {
+    width: 50%;
+    font-size: 16px;
+    padding: 10px 20px;
   }
 }
