--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -3,11 +3,17 @@
   height: 50vh;
   object-fit: cover;
   margin: 20px 0px;
+  max-width: 1800px;
 }
 
 .main-title {
   text-align: center;
-  font-size: 50px;
+  font-size: 3rem;
+  margin: 80px 0px 20px 0px;
+}
+
+.rubriques-title {
+  font-size: 2rem;
   margin: 80px 0px 20px 0px;
 }
 
@@ -18,12 +24,14 @@
   gap: 20px;
   flex-wrap: wrap;
   max-width: 1000px;
+  margin-bottom: 60px;
 }
 
 .card:hover {
   transform: scale(1.1);
   transition: 0.5s;
   cursor: pointer;
+  box-shadow: 0px 0px 10px 0px #000000;
 }
 
 .card {
@@ -49,15 +57,22 @@
 }
 
 .news {
-  margin: 40px 0;
+  margin: 60px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
-.news h3 {
+.news-heading {
+  text-align: center;
+  font-size: 2rem;
+  margin: 40px 0px 20px 0px;
+}
+
+.news-title {
   margin: 20px 80px;
+  font-size: 1.5rem;
 }
 
 .news svg {
@@ -82,9 +97,9 @@
 }
 
 /* ----------Affichage sur Tablette---------*/
-@media screen and (min-width: 769px) and (max-width: 992px) {
-  .title {
-    font-size: 40px;
+@media screen and (min-width: 768px) and (max-width: 992px) {
+  .main-title {
+    font-size: 2rem;
   }
   .news {
     margin: 20px 20px;
@@ -109,9 +124,21 @@
 }
 
 /* ------------Affichage sur mobile-------------*/
-@media screen and (min-width: 320px) and (max-width: 768px) {
-  .title {
-    font-size: 20px;
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .main-title {
+    font-size: 1.5rem;
+  }
+
+  .banner-home {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
+    margin: 20px 0px;
+  }
+
+  .rubriques-title {
+    font-size: 1.5rem;
+    margin: 80px 0px 20px 0px;
   }
 
   .card {
@@ -131,11 +158,22 @@
     height: 200px;
   }
 
+  .news-heading {
+    text-align: center;
+    font-size: 1.5rem;
+    margin: 0px 0px 20px 0px;
+  }
+
   .news {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 0;
+  }
+
+  .news-title {
+    font-size: 1.2rem;
+    margin-top: 40px;
   }
 
   .news h3 {
@@ -144,9 +182,19 @@
 
   .news p {
     margin: 10px 20px;
+    font-size: 1rem;
   }
 
+  /* .news p {
+    margin: 20px 80px;
+    max-width: 500px;
+    text-align: justify;
+    min-width: 300px;
+  } */
+
   .news-img {
-    margin: 10px;
+    margin: 0;
+    width: 100%;
+    height: auto;
   }
 }
